[gd_scene load_steps=8 format=3 uid="uid://bonro21t1uhfu"]

[ext_resource type="Theme" uid="uid://e0ysmbexe776" path="res://Themes/Login/Login.tres" id="1_tf1il"]
[ext_resource type="Script" path="res://Scripts/Login.gd" id="1_x6wao"]
[ext_resource type="Theme" uid="uid://d3n6kqhglrbq2" path="res://Themes/Empty/Empty.tres" id="2_kpv7y"]
[ext_resource type="Texture2D" uid="uid://cvc8k23m2vqba" path="res://Icons/Login/cut.jpg" id="2_plopf"]
[ext_resource type="Texture2D" uid="uid://dqmcdls336et2" path="res://Icons/Animals/Bear_144.png" id="3_tp0l8"]
[ext_resource type="Theme" uid="uid://hwm0wlbmcybu" path="res://Themes/Login/Login_Hello.tres" id="4_ty8rh"]
[ext_resource type="Theme" uid="uid://d0csjqmvuy0cs" path="res://Themes/Login/Login_subtext.tres" id="5_og0f4"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x6wao")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tf1il")

[node name="Photo_Login" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tf1il")

[node name="Photo" type="Panel" parent="Photo_Login"]
custom_minimum_size = Vector2(1266, 0)
layout_mode = 2

[node name="Hubert-neufeld-gg1CwF4Qdlg-unsplash" type="Sprite2D" parent="Photo_Login/Photo"]
position = Vector2(629.602, 540.006)
scale = Vector2(0.673647, 0.673647)
texture = ExtResource("2_plopf")

[node name="Login" type="VBoxContainer" parent="Photo_Login"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_tf1il")

[node name="Space" type="Panel" parent="Photo_Login/Login"]
custom_minimum_size = Vector2(0, 234)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Login" type="VBoxContainer" parent="Photo_Login/Login"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_tf1il")

[node name="Icon" type="HBoxContainer" parent="Photo_Login/Login/Login"]
layout_mode = 2
theme = ExtResource("1_tf1il")

[node name="Space" type="Panel" parent="Photo_Login/Login/Login/Icon"]
custom_minimum_size = Vector2(248, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Connction_rightH" type="ColorRect" parent="Photo_Login/Login/Login/Icon/Space"]
custom_minimum_size = Vector2(197, 2)
layout_mode = 0
offset_left = 388.68
offset_top = 70.25
offset_right = 585.68
offset_bottom = 72.25
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Connection_leftH" type="ColorRect" parent="Photo_Login/Login/Login/Icon/Space"]
custom_minimum_size = Vector2(197, 2)
layout_mode = 0
offset_left = 52.0
offset_top = 70.0
offset_right = 249.0
offset_bottom = 72.0
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Connection_leftV" type="ColorRect" parent="Photo_Login/Login/Login/Icon/Space"]
custom_minimum_size = Vector2(520, 2)
layout_mode = 0
offset_left = 51.9034
offset_top = 69.5962
offset_right = 571.903
offset_bottom = 71.5962
rotation = 1.5708
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Panel_for_icon" type="Panel" parent="Photo_Login/Login/Login/Icon"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Icon" type="Sprite2D" parent="Photo_Login/Login/Login/Icon/Panel_for_icon"]
position = Vector2(72.0446, 72.2824)
texture = ExtResource("3_tp0l8")

[node name="Space2" type="Panel" parent="Photo_Login/Login/Login/Icon"]
custom_minimum_size = Vector2(248, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Connection_rightV" type="ColorRect" parent="Photo_Login/Login/Login/Icon/Space2"]
custom_minimum_size = Vector2(520, 2)
layout_mode = 0
offset_left = 193.903
offset_top = 69.5962
offset_right = 713.903
offset_bottom = 71.5962
rotation = 1.5708
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Connection_down" type="ColorRect" parent="Photo_Login/Login/Login/Icon/Space2"]
custom_minimum_size = Vector2(520, 2)
layout_mode = 0
offset_left = -340.0
offset_top = 588.0
offset_right = 192.0
offset_bottom = 590.0
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Space" type="Panel" parent="Photo_Login/Login/Login"]
custom_minimum_size = Vector2(183, 50)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Hello" type="HBoxContainer" parent="Photo_Login/Login/Login"]
layout_mode = 2
theme = ExtResource("1_tf1il")

[node name="Space" type="Panel" parent="Photo_Login/Login/Login/Hello"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Hello" type="Label" parent="Photo_Login/Login/Login/Hello"]
layout_mode = 2
theme = ExtResource("4_ty8rh")
text = "Добро пожаловать!"

[node name="Space2" type="Panel" parent="Photo_Login/Login/Login/Hello"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Space2" type="Panel" parent="Photo_Login/Login/Login"]
custom_minimum_size = Vector2(183, 69)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="SubText" type="HBoxContainer" parent="Photo_Login/Login/Login"]
layout_mode = 2
theme = ExtResource("1_tf1il")

[node name="Space" type="Panel" parent="Photo_Login/Login/Login/SubText"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Subtext" type="Label" parent="Photo_Login/Login/Login/SubText"]
layout_mode = 2
theme = ExtResource("5_og0f4")
text = "ВВЕДИТЕ ВЫДАННЫЕ ВАМ ЛОГИН И ПАРОЛЬ, ЧТОБЫ ВОЙТИ В СИСТЕМУ"

[node name="Connecton_HL" type="ColorRect" parent="Photo_Login/Login/Login/SubText/Subtext"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -14.0
offset_top = 21.0
offset_right = 466.0
offset_bottom = 23.0
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Connection_V" type="ColorRect" parent="Photo_Login/Login/Login/SubText/Subtext"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -12.0
offset_top = 23.0
offset_right = 46.0
offset_bottom = 25.0
rotation = 1.5708
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Connection_HS" type="ColorRect" parent="Photo_Login/Login/Login/SubText/Subtext"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -12.0
offset_top = 79.0
offset_right = 95.0
offset_bottom = 81.0
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Space2" type="Panel" parent="Photo_Login/Login/Login/SubText"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Space3" type="Panel" parent="Photo_Login/Login/Login"]
custom_minimum_size = Vector2(183, 40)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Login_password" type="HBoxContainer" parent="Photo_Login/Login/Login"]
layout_mode = 2
theme = ExtResource("1_tf1il")

[node name="Space" type="Panel" parent="Photo_Login/Login/Login/Login_password"]
custom_minimum_size = Vector2(206, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Login_password" type="VBoxContainer" parent="Photo_Login/Login/Login/Login_password"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_tf1il")

[node name="Login" type="LineEdit" parent="Photo_Login/Login/Login/Login_password/Login_password"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("1_tf1il")
placeholder_text = "Логин"

[node name="Password" type="LineEdit" parent="Photo_Login/Login/Login/Login_password/Login_password"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("1_tf1il")
placeholder_text = "Пароль"

[node name="Space2" type="Panel" parent="Photo_Login/Login/Login/Login_password"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Space4" type="Panel" parent="Photo_Login/Login/Login"]
custom_minimum_size = Vector2(183, 55)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Enterence" type="HBoxContainer" parent="Photo_Login/Login/Login"]
layout_mode = 2
theme = ExtResource("1_tf1il")

[node name="Space" type="Panel" parent="Photo_Login/Login/Login/Enterence"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Button" type="Button" parent="Photo_Login/Login/Login/Enterence"]
custom_minimum_size = Vector2(279, 45)
layout_mode = 2
theme = ExtResource("1_tf1il")
toggle_mode = true
text = "Войти"

[node name="Connection_H" type="ColorRect" parent="Photo_Login/Login/Login/Enterence/Button"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -43.0
offset_top = 21.0
offset_right = 1.0
offset_bottom = 23.0
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Connection_V" type="ColorRect" parent="Photo_Login/Login/Login/Enterence/Button"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -43.0
offset_top = 21.0
offset_right = 30.0
offset_bottom = 23.0
rotation = 1.5708
color = Color(0.54902, 0.607843, 0.658824, 1)

[node name="Space2" type="Panel" parent="Photo_Login/Login/Login/Enterence"]
custom_minimum_size = Vector2(185, 0)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[node name="Space2" type="Panel" parent="Photo_Login/Login"]
custom_minimum_size = Vector2(0, 234)
layout_mode = 2
theme = ExtResource("2_kpv7y")

[connection signal="focus_entered" from="Photo_Login/Login/Login/Login_password/Login_password/Login" to="." method="_on_login_focus_entered"]
[connection signal="focus_exited" from="Photo_Login/Login/Login/Login_password/Login_password/Login" to="." method="_on_login_focus_exited"]
[connection signal="focus_entered" from="Photo_Login/Login/Login/Login_password/Login_password/Password" to="." method="_on_password_focus_entered"]
[connection signal="focus_exited" from="Photo_Login/Login/Login/Login_password/Login_password/Password" to="." method="_on_password_focus_exited"]
[connection signal="focus_entered" from="Photo_Login/Login/Login/Enterence/Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Photo_Login/Login/Login/Enterence/Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Photo_Login/Login/Login/Enterence/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Photo_Login/Login/Login/Enterence/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Photo_Login/Login/Login/Enterence/Button" to="." method="_on_button_pressed"]
